Changes in top level CVS tree.  A few notes when putting entries in this
file:
1) Please include a date in the form mm/dd/yyyy (yes, us americans are 
screwed up relative to most the world, but some consistent date format
is needed for this file.)
2) You don't need to go into exacting detail of the changes.  This file
is mostly meant to give an idea to others what has changed - you don't
need to recreate the code here.  If you change fixes a reported bug
on the mailing list, please provide a brief description of the bug
fixed.  But please do try to include a useful description of
what changed.  Saying something like 'General cleanup - just whitespace
changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

random_maps/exit.c
random_maps/random_map.c
random_maps/random_map.h
random_maps/reader.l
random_maps/rproto.h
random_maps/special.c
random_maps/wall.c
	added fix for random maps with single arch walls, 
	added level indicator on random map signs
	added new parameter 'exit_on_final_map'-  see documentation
TM 2004-08-07

include/plugin.h 
plugin/plugin_python.c 
server/c_wiz.c
server/plugins.c
	add event hooks for Kick and Muzzle(toggle_shout) commands.
    fix CFSetQuantity by changing the int to uint and remove 100000 item limit.
    pythonplug now looks for event scripts in maps/python/events.
TM 2004-08-02

server/skills.c: xp for writing is now multiplied by skill level, to
   make it possible to level.
Ryo 2004-07-17

common/loader.c: add #ifndef for non-existant Win32 header
include/win32.h: #define vsnprintf _vsnprintf to fix linking issue
Ryo 2004-07-03
