@@ -1,6 +1,6 @@
 Changes in top level CVS tree.  A few notes when putting entries in this
 file:
-1) Please include a date in the form mm/dd/yyyy (yes, us americans are 
+1) Please include a date in the form yyyy/mm/dd (yes, us americans are 
 screwed up relative to most the world, but some consistent date format
 is needed for this file.)
 2) You don't need to go into exacting detail of the changes.  This file
@@ -16,6 +16,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
+
+server/spell_attack.c: fix mood_change when spell has no attacktype.
+    In this case, do a specific saving throw, to ensure a level 1 player
+    can't charm a level 125 monster.
+Ryo 2004-08-14
 
 random_maps/exit.c
 random_maps/random_map.c
